--- a/ExpressGraphServer/package.json
+++ b/ExpressGraphServer/package.json
@@ -4,7 +4,8 @@
   "description": "simple express and graphql server",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev:server": "nodemon server.js"
   },
   "author": "dbwx",
   "license": "MIT",
